--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,5 +14,18 @@ repos:
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: "v1.92.1"
     hooks:
+      - id: terraform_providers_lock
+        args:
+        - --hook-config=--tf-path=tofu
+        - --hook-config=--mode=only-check-is-current-lockfile-cross-platform
+        - --args=-platform=darwin_amd64
+        - --args=-platform=darwin_arm64
+        - --args=-platform=linux_amd64
+        - --args=-platform=linux_arm64
       - id: terraform_fmt
+        args:
+        - --hook-config=--tf-path=tofu
       - id: terraform_validate
+        args:
+        - --hook-config=--tf-path=tofu
+        - --hook-config=--retry-once-with-cleanup=true
