argocd: whitelist app and infra projects to be used as labels until otherwise

--- a/kubernetes/common/argo-config/templates/app-project.yaml
+++ b/kubernetes/common/argo-config/templates/app-project.yaml
@@ -7,4 +7,12 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  description: Apps
+  description: Application resources used for running business workloads.
+  sourceRepos:
+  - '*'
+  destinations:
+  - namespace: '*'
+    server: '*'
+  clusterResourceWhitelist:
+  - group: '*'
+    kind: '*'
