--- a/kubernetes/common/argo-config/templates/infra-project.yaml
+++ b/kubernetes/common/argo-config/templates/infra-project.yaml
@@ -7,4 +7,12 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  description: Infrastructure supporting apps
+  description: Infrastructure resources supporting application workloads.
+  sourceRepos:
+  - '*'
+  destinations:
+  - namespace: '*'
+    server: '*'
+  clusterResourceWhitelist:
+  - group: '*'
+    kind: '*'
