abandon kustomize, adopt mise, document decisions

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -8,3 +8,9 @@ creation_rules:
   - path_regex: secrets.stage.env
     kms: 'arn:aws:kms:ca-central-1:542371827759:key/bb9f8f84-d188-42d8-8634-f2b0b2941228'
     aws_profile: 'gpo-stage'
+  - path_regex: .*/stage/secret.yaml
+    kms: 'arn:aws:kms:ca-central-1:542371827759:key/bb9f8f84-d188-42d8-8634-f2b0b2941228'
+    aws_profile: 'gpo-stage'
+  - path_regex: .*/prod/secret.yaml
+    kms: 'arn:aws:kms:ca-central-1:060795914812:key/c7ecdd9a-8269-422e-98a2-efa86f09483a'
+    aws_profile: 'gpo-prod'
