--- a/kubernetes/grassroots/stage/configmap-dynamic.yaml
+++ b/kubernetes/grassroots/stage/configmap-dynamic.yaml
@@ -7,4 +7,4 @@ data:
   VITE_FRONTEND_HOST: "https://grassroots.gpotoolsstage.ca"
 kind: ConfigMap
 metadata:
-  name: grassroots
+  name: grassroots-dynamic
