--- a/.mise.toml
+++ b/.mise.toml
@@ -3,6 +3,7 @@ opentofu = '1.9.1'
 pre-commit = '4.5.0'
 sops = '3.11.0'
 jq = '1.8.1'
+argocd = '3.2.1'
 
 [tasks.pc]
 description = "Run all git pre-commit hooks."
@@ -19,6 +20,12 @@ run = [{tasks = [
 description = "Transform TF outputs into K8s YAMLs for superset."
 env.APPNAME = "superset"
 dir = "kubernetes/superset"
+run = "../../scripts/genk8s.sh"
+
+[tasks."argocd:genk8s"]
+description = "Transform TF outputs into K8s YAMLs for argocd."
+env.APPNAME = "argocd"
+dir = "kubernetes/argocd"
 run = "../../scripts/genk8s.sh"
 
 [tasks."grassroots:genk8s"]
