--- a/.mise.toml
+++ b/.mise.toml
@@ -10,7 +10,16 @@ run = "pre-commit run --all-files"
 
 [tasks.genk8s]
 description = "Transform TF outputs into K8s YAMLs"
-run = [{tasks = ["grassroots:genk8s"]}]
+run = [{tasks = [
+ "grassroots:genk8s",
+ "superset:genk8s",
+]}]
+
+[tasks."superset:genk8s"]
+description = "Transform TF outputs into K8s YAMLs for superset."
+env.APPNAME = "superset"
+dir = "kubernetes/superset"
+run = "../../scripts/genk8s.sh"
 
 [tasks."grassroots:genk8s"]
 description = "Transform TF outputs into K8s YAMLs for the grassroots app."
