--- a/kubernetes/superset/prod/httproute-dynamic.yaml
+++ b/kubernetes/superset/prod/httproute-dynamic.yaml
@@ -12,7 +12,7 @@ spec:
     namespace: gateway
     sectionName: https
   hostnames:
-  - "${hostname}"
+  - "superset.gpotools.ca"
   rules:
   - backendRefs:
     - name: superset
