--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,12 @@ repos:
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: "v1.92.1"
     hooks:
+      - id: terraform_validate
+        args:
+        - --hook-config=--tf-path=tofu
+        - --hook-config=--retry-once-with-cleanup=true
+        - --tf-init-args=-upgrade
+        exclude: modules/.*$
       - id: terraform_providers_lock
         args:
         - --hook-config=--tf-path=tofu
@@ -26,8 +32,3 @@ repos:
       - id: terraform_fmt
         args:
         - --hook-config=--tf-path=tofu
-      - id: terraform_validate
-        args:
-        - --hook-config=--tf-path=tofu
-        - --hook-config=--retry-once-with-cleanup=true
-        exclude: modules/.*$
