Changes in support of getting superset to prod (#133)
* update superset gateway ns reference

* ensure rendered templates have trailing newlines

* bump google tf provider version

* add prod secrets for superset

* templatize superset helm values

* pipe our image registry through tf outputs

* add docker build task for superset

* split prod/stage gateway config

* nuke static gateway

* split prod/stage certs

* nuke old cert

* add gateway outputs

* small tool for gateway deploy

* use correct docker repo for superset image

* sync stage->prod outputs

* add registry output

--- a/kubernetes/superset/prod/values-dynamic.yaml
+++ b/kubernetes/superset/prod/values-dynamic.yaml
@@ -10,5 +10,5 @@ redis:
 # Custom Superset image which contains their upstream release plus pip packages
 # for MySQL and PostgreSQL drivers.
 image:
-  repository: northamerica-northeast2-docker.pkg.dev/gpo-eng-stage/gpo/apache-superset
-  tag: 5.0.0
+  repository: northamerica-northeast2-docker.pkg.dev/gpo-eng-prod/gpo/apache-superset
+  tag: v0.0.1
