--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Format and Validate
+name: CI Generic Checks
 
 on:
   pull_request:
@@ -7,18 +7,14 @@ on:
       - synchronize
 
 jobs:
-  format-and-validate:
+  generic-checks:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up OpenTofu
-        uses: opentofu/setup-opentofu@v1
-
-      - name: Use OpenTofu for Terraform
-        run: echo "PCT_TFPATH=$(which tofu)" >> $GITHUB_ENV
+        uses: actions/checkout@v4
 
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.1
+        env:
+          SKIP: terraform-docs-go terraform_validate terraform_providers_lock terraform_fmt
