add grassroutes tf outputs and yaml templates

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,8 @@ repos:
     - id: trailing-whitespace
     - id: check-merge-conflict
     - id: check-yaml
+      args:
+      - --allow-multiple-documents
   - repo: https://github.com/terraform-docs/terraform-docs
     rev: "v0.18.0"
     hooks:
