--- a/kubernetes/grassroots/resources/service.yaml
+++ b/kubernetes/grassroots/resources/service.yaml
@@ -12,3 +12,20 @@ spec:
     port: 5173
     protocol: TCP
     targetPort: http
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend
+  labels:
+    app: backend
+spec:
+  selector:
+    app: backend
+  ports:
+  - name: http
+    port: 3000
+    protocol: TCP
+    targetPort: http
