--- a/.mise.toml
+++ b/.mise.toml
@@ -14,18 +14,19 @@ description = "Transform TF outputs into K8s YAMLs"
 run = [{tasks = [
  "grassroots:genk8s",
  "superset:genk8s",
+ "argocd:genk8s",
 ]}]
-
-[tasks."superset:genk8s"]
-description = "Transform TF outputs into K8s YAMLs for superset."
-env.APPNAME = "superset"
-dir = "kubernetes/superset"
-run = "../../scripts/genk8s.sh"
 
 [tasks."argocd:genk8s"]
 description = "Transform TF outputs into K8s YAMLs for argocd."
 env.APPNAME = "argocd"
 dir = "kubernetes/argocd"
+run = "../../scripts/genk8s.sh"
+
+[tasks."superset:genk8s"]
+description = "Transform TF outputs into K8s YAMLs for superset."
+env.APPNAME = "superset"
+dir = "kubernetes/superset"
 run = "../../scripts/genk8s.sh"
 
 [tasks."grassroots:genk8s"]
