--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,7 @@ jobs:
 
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: >
+            --from-ref origin/${{ github.event.pull_request.base.sha }}
+            --to-ref ${{ github.sha }}
