--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,5 @@ jobs:
         uses: pre-commit/action@v3.0.1
         with:
           extra_args: >
-            --from-ref origin/${{ github.event.pull_request.base.sha }}
+            --from-ref ${{ github.event.pull_request.base.sha }}
             --to-ref ${{ github.sha }}
