--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: Fetch all history for diff comparison
+        run: git fetch --no-tags origin ${{ github.event.pull_request.base.sha }} --depth=1
 
       - name: Set up OpenTofu
         uses: opentofu/setup-opentofu@v1
