--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           extra_args: >
             --from-ref ${{ github.event.pull_request.base.sha }}
-            --to-ref ${{ github.sha }}
+            --to-ref ${{ github.event.pull_request.head.sha }}
