run on diffed files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,4 @@ jobs:
         uses: pre-commit/action@v3.0.1
         with:
           extra_args: >
-            --from-ref ${{ github.event.pull_request.base.sha }}
-            --to-ref ${{ github.event.pull_request.head.sha }}
+            --files $(git diff --name-only --diff-filter=ACMRTUXB ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }})
