--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
     hooks:
       - id: terraform-docs-go
         args: ["markdown", "table", "--output-file", "README.md", "./"]
+        files: ^(.*\.hcl|.*\.tf)$
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: "v1.92.1"
     hooks:
@@ -22,6 +23,7 @@ repos:
         - --hook-config=--retry-once-with-cleanup=true
         - --tf-init-args=-upgrade
         exclude: modules/.*$
+        files: ^(.*\.hcl|.*\.tf)$
       - id: terraform_providers_lock
         args:
         - --hook-config=--tf-path=tofu
@@ -31,6 +33,8 @@ repos:
         - --args=-platform=linux_amd64
         - --args=-platform=linux_arm64
         exclude: modules/.*$
+        files: ^(.*\.hcl|.*\.tf)$
       - id: terraform_fmt
         args:
         - --hook-config=--tf-path=tofu
+        files: ^(.*\.hcl|.*\.tf)$
