--- a/kubernetes/superset/prod/values.yaml
+++ b/kubernetes/superset/prod/values.yaml
@@ -1,4 +1,4 @@
-# genk8s:hash=421084eee3fad16bd18a43c81bc12c4f
+# genk8s:hash=cadd99cfa15fae08ca16a6f4cefcf4a1
 # +argocd:skip-file-rendering
 postgresql:
   image:
@@ -21,5 +21,5 @@ image:
 configOverrides:
   superset_config.py: |
     FEATURE_FLAGS = {
-      DASHBOARD_RBAC: True,
+      'DASHBOARD_RBAC': True,
     }
